--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.0.2",
     "express-session": "^1.15.6",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.2.0",
     "jsencrypt": "^2.3.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
@@ -25,10 +26,12 @@
     "multer": "^1.3.0",
     "node-rsa": "^0.4.2",
     "node-sass": "^4.7.2",
+    "normalize.css": "^7.0.0",
     "plupload": "^2.3.4",
     "safe-buffer": "^5.1.1",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
+    "vue-i18n": "^7.3.3",
     "vue-jsonp": "^0.1.6",
     "vue-qiniu-upload": "0.0.4",
     "vue-resource": "^1.3.4",
