--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-session": "^0.9.10",
+    "vue2-scrollbar": "^0.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
