--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "connect-history-api-fallback": "^1.5.0",
+    "connect-redis": "^3.3.2",
     "echarts": "^3.8.5",
     "element-ui": "^2.0.2",
     "express-session": "^1.15.6",
